force-app/main/default/objects/Pending_Participant__c/Pending_Participant__c.object-meta.xml
<CustomObject>
    <label>Pending Participant</label>
    <nameField>
        <label>Pending Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pending Participants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>