force-app/main/default/objects/Pending_Participant__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>