force-app/main/default/objects/Pending_Participant__c/fields/Internal_Data__c.field-meta.xml
<CustomField>
    <fullName>Internal_Data__c</fullName>
    <label>Internal Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>