force-app/main/default/objects/Pending_Participant__c/fields/Membership_Id__c.field-meta.xml
<CustomField>
    <fullName>Membership_Id__c</fullName>
    <label>Membership Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>