force-app/main/default/objects/Pending_Participant__c/fields/Send_to_IDS__c.field-meta.xml
<CustomField>
    <fullName>Send_to_IDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To IDS</label>
    <type>Checkbox</type>
</CustomField>