force-app/main/default/objects/Pending_Participant__c/fields/Sent_To_IDS_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_IDS_Date__c</fullName>
    <label>Sent To IDS Date</label>
    <type>Date</type>
</CustomField>