force-app/main/default/objects/Pending_Participant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Researching</fullName>
            </value>
            <value>
                <fullName>Contact Participant</fullName>
            </value>
            <value>
                <fullName>Contact Help Desk</fullName>
            </value>
            <value>
                <fullName>Cannot Resolve</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>