force-app/main/default/objects/Pending_Participant__c/listViews/Not_Completed.listView-meta.xml
<ListView>
    <fullName>Not_Completed</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sent_To_IDS_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Error_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_Type__c</field>
        <operation>equals</operation>
        <value>Address,Konnex,Invalid Input,Unknown Error</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>NY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Researching,Contact Participant,Contact Help Desk</value>
    </filters>
    <label>NY Pend Part - Not Completed</label>
</ListView>